<resources>
    <string name="app_name">Catify</string>
    <string name="where_every_meow_matters">Where Every Meow Matters</string>
    <string name="logo">logo</string>
    <string name="welcome">Welcome to Catify</string>
    <string name="search">Search for products...</string>
    <string name="food">Food</string>
    <string name="toys">Toys</string>
    <string name="litter">Litter</string>
    <string name="accessories">Accessories</string>
    <string name="beds">Beds</string>
    <string name="treats">Treats</string>
    <string name="product_img">product_img</string>
    <string name="product_name">Product Name</string>
    <string name="_0_00">$0.00</string>
    <string name="welcome_to_catify">WELCOME TO CATIFY</string>
    <string name="wishlist">Wishlist</string>
    <string name="contact">Contact</string>
    <string name="login">Login</string>
    <string name="you_need_help_contact_us_today">You need help? Contact us today!</string>
    <string name="contact_us">CONTACT-US</string>
    <string name="send_message">Send Message</string>
    <string name="your_message">Your Message</string>
    <string name="your_email">Your Email</string>
    <string name="your_name">Your Name</string>
    <string name="send_us_a_message">Send us a Message</string>
    <string name="back">Back</string>
    <string name="_9_99">$9.99</string>
    <string name="product_description">Product Description</string>
    <string name="category_food">Category: Food</string>
    <string name="subcategory_wetfood">SubCategory: WetFood</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="your_cart">Your Cart</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="cart">Cart</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="register_text">Register</string>
    <string name="login_to_catify">Login to Catify</string>
    <string name="username_">Username</string>
    <string name="password_">Password</string>
    <string name="login_Button">Login</string>
    <string name="don_t_have_an_account_register">Don’t have an account? Register</string>
    <string name="remove">Remove</string>
    <string name="_0">0</string>
    <string name="account_information">Account Information</string>
    <string name="wish">Wish</string>
    <string name="product_image">Product Image</string>
</resources>