<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:layout_gravity="start"/>

    <TextView
        android:id="@+id/txtTitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_catify"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorDarkText"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_"
        android:inputType="textPassword"
        android:padding="12dp"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_Button"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/txtRegisterNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_register"
        android:textColor="@color/colorDarkText"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:textStyle="italic"/>


</LinearLayout>
