<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cardview_light_background"
    tools:context=".ContactActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <ImageView
            android:id="@+id/imgHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/slide4" />

        <TextView
            android:layout_width="392dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical|start"
            android:text="@string/contact_us"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/you_need_help_contact_us_today"
                style="@style/TitleText"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"
                />

            <EditText
                android:id="@+id/edtName"
                android:hint="@string/your_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="10dp"

                android:layout_marginBottom="12dp"/>

            <EditText
                android:id="@+id/edtEmail"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="10dp"

                android:layout_marginBottom="12dp"/>

            <EditText
                android:id="@+id/edtMessage"
                android:hint="@string/your_message"
                android:minLines="5"
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"

                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/btnSend"
                android:text="@string/send_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginBottom="20dp" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back" />

</LinearLayout>
